grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  replicas: 0
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:v4.6.0-ls322
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: grocy-config
              mountPath: /config
            - name: grocy-php-config
              mountPath: /config/php/www2.conf
              subPath: www2.conf
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
      volumes:
        - name: grocy-config
          persistentVolumeClaim:
            claimName: grocy-config
        - name: grocy-php-config
          configMap:
            name: grocy-php-config
