grocy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: grocy
  annotations:
    tailscale.com/hostname: grocy
    tailscale.com/proxy-class: spread-across-nodes
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grocy
  rules:
    - host: grocy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  number: 80
